<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Modul2Activity">
    <LinearLayout
        android:id="@+id/bahasa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioGroup
            android:id="@+id/radiogroupbhs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/BhsID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/idn_x32"
                android:layout_marginTop="8sp"/>
            <RadioButton
                android:id="@+id/BhsEN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/eng_x32"
                android:layout_marginTop="8sp"/>
            <Button
                android:id="@+id/pilihBhs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/IDbtnpilih"
                android:onClick="pilihRD"/>
        </RadioGroup>

    </LinearLayout>
    <TextView
        android:id="@+id/namaShop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bahasa"
        android:text="COFFEE SHOP"
        android:textColor="@color/colorPrimary"
        android:textSize="28sp"
        android:textAlignment="center"/>
    <TextView
        android:id="@+id/namapemesan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/namaShop"
        android:text="@string/IDpemesan"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="center"/>
    <EditText
        android:id="@+id/inputNama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/namapemesan"
        android:hint="@string/IDinputNama"
        android:textSize="15sp"
        android:textAlignment="center"/>
    <RelativeLayout
        android:id="@+id/Laysajian"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@+id/inputNama">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/sajian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/IDsajian"/>
            <RadioGroup
                android:id="@+id/rdsajian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/hangat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/IDhangat" />
                <RadioButton
                    android:id="@+id/dingin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/IDdingin"/>
            </RadioGroup>
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/menucoffee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inputNama"
        android:layout_marginLeft="5sp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/IDmenu"/>
            <CheckBox
                android:id="@+id/arabica"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Arabica"/>
            <CheckBox
                android:id="@+id/robusta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Robusta"/>
            <CheckBox
                android:id="@+id/american"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="American"/>
        </LinearLayout>
    </RelativeLayout>
    <EditText
        android:id="@+id/jumlah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/menucoffee"
        android:layout_centerInParent="true"
        android:text="0"
        android:inputType="numberDecimal"/>
    <Button
        android:id="@+id/minus"
        android:onClick="minus"
        android:layout_width="50sp"
        android:layout_height="wrap_content"
        android:layout_below="@id/menucoffee"
        android:layout_toLeftOf="@+id/jumlah"
        android:text="-"/>
    <Button
        android:id="@+id/plus"
        android:onClick="plus"
        android:layout_width="50sp"
        android:layout_height="wrap_content"
        android:layout_below="@id/menucoffee"
        android:layout_toRightOf="@+id/jumlah"
        android:text="+"/>
    <Button
        android:id="@+id/order"
        android:onClick="order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/jumlah"
        android:text="@string/IDpesan"/>
    <Button
        android:id="@+id/hubungi"
        android:onClick="hubungi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/order"
        android:text="Hubungi" />
</RelativeLayout>